--- a/DPO2_U2_A4_RARP/src/interfaces/EmpleadosAltas.form
+++ b/DPO2_U2_A4_RARP/src/interfaces/EmpleadosAltas.form
@@ -28,6 +28,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Alta Empleado"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuAltaEmpleadoActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuBajaEmpleado">
               <Properties>
@@ -36,6 +39,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Baja Empleado"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuBajaEmpleadoActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -54,6 +60,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Alta Insumo"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuIteAltaInsumoActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuIteBjaInsumo">
               <Properties>
@@ -62,6 +71,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Baja Insumo"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuIteBjaInsumoActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
