--- a/DPO2_U2_A4_RARP/src/interfaces/EmpleadosBajas.form
+++ b/DPO2_U2_A4_RARP/src/interfaces/EmpleadosBajas.form
@@ -19,6 +19,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Alta Empleado"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuAltaEmpleadoActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuBajaEmpleado">
               <Properties>
@@ -27,6 +30,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Baja Empleado"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuBajaEmpleadoActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -45,6 +51,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Alta Insumo"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuIteAltaInsumoActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuIteBjaInsumo">
               <Properties>
@@ -53,6 +62,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Baja Insumo"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuIteBjaInsumoActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
