Creación de la ventana de nomina

--- a/DPO2_U2_EA_RARP/src/main/Principal.form
+++ b/DPO2_U2_EA_RARP/src/main/Principal.form
@@ -69,9 +69,15 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="menuItemCalclarNomina">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/imagenes/calcular.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Calcular N&#xf3;mina"/>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemCalclarNominaActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -80,14 +86,20 @@
             <Property name="text" type="java.lang.String" value="Consultas"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
+            <MenuItem class="javax.swing.JMenuItem" name="menuItemConsultaPersonal">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jMenuItem3"/>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/imagenes/empleo.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Consulta Personal"/>
               </Properties>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem4">
+            <MenuItem class="javax.swing.JMenuItem" name="menuItemConsultaInsumos">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jMenuItem4"/>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/imagenes/inventarios.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Consulta Insumos"/>
               </Properties>
             </MenuItem>
           </SubComponents>
