--- a/DPO2_U2_EA_RARP/src/main/Principal.form
+++ b/DPO2_U2_EA_RARP/src/main/Principal.form
@@ -72,7 +72,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/imagenes/calcular.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Calcular N&#xf3;mina"/>
+                <Property name="text" type="java.lang.String" value="C&#xe1;lcular N&#xf3;mina"/>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
               </Properties>
               <Events>
