--- a/DPO2_U2_EA_RARP/src/main/Principal.form
+++ b/DPO2_U2_EA_RARP/src/main/Principal.form
@@ -93,6 +93,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Consulta Personal"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemConsultaPersonalActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuItemConsultaInsumos">
               <Properties>
