--- a/DPO2_U2_EA_RARP/src/main/Principal.form
+++ b/DPO2_U2_EA_RARP/src/main/Principal.form
@@ -104,6 +104,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Consulta Insumos"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemConsultaInsumosActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
