Creación del método que permite el ingresar datos a la base de datos

--- a/DPO2_U3_A2_RARP/src/main/Principal.form
+++ b/DPO2_U3_A2_RARP/src/main/Principal.form
@@ -143,7 +143,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="119" max="-2" attributes="0"/>
               <Component id="btnproductos" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="159" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btntrabajador" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
